fix: enhance avatar and image cropper components; update profile form styles
- Updated avatar component to include a background color for better visibility.
- Refactored image cropper styles for improved layout and responsiveness.
- Adjusted profile form container styles for better alignment and spacing.
- Added shadow effect to avatar for a more polished appearance.

--- a/src/components/forms/profile/main.module.css
+++ b/src/components/forms/profile/main.module.css
@@ -19,7 +19,7 @@
 }
 
 .container {
-  @apply flexCol items-center p-8 md:h-[calc(100vh-176px)];
+  @apply flexCenter items-center p-8 md:h-[calc(100vh-176px)] flex-col;
 }
 
 .formContainer {
@@ -55,7 +55,7 @@
 }
 
 .avatar {
-  @apply h-60 w-60;
+  @apply h-60 w-60 shadow-xl;
 }
 
 .editButton {
